# trade-analytics-copilot

./: .replit  DESIGN.md  README.md  pyproject.toml  replit.md  trade-analytics-copilot-implementation.docx.docx
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/py/: alpaca_client.py  auth_utils.py  db.py  embed_utils.py  main.py  models.py  pinecone_utils.py  requirements.txt  schemas.py  seed.py
artifacts/api-server/py/routes/: __init__.py  analytics.py  auth.py  brokers.py  dashboard.py  insights.py  journal.py  portfolio.py  trades.py
artifacts/api-server/src/: app.ts
artifacts/api-server/src/data/: seed.ts
artifacts/api-server/src/middleware/: requireAuth.ts
artifacts/api-server/src/routes/: analytics.ts  auth.ts  brokers.ts  dashboard.ts  index.ts  insights.ts  journal.ts  portfolio.ts  trades.ts
artifacts/mockup-sandbox/src/.generated/: mockup-components.ts
artifacts/mockup-sandbox/src/components/mockups/trade-copilot-p1/: Dashboard.tsx  Login.tsx
artifacts/mockup-sandbox/src/components/mockups/trade-copilot-p2/: Connections.tsx  (+2 more)
artifacts/trade-copilot/: index.html  package.json
artifacts/trade-copilot/.replit-artifact/: artifact.toml
artifacts/trade-copilot/src/: App.tsx  index.css
artifacts/trade-copilot/src/components/layout/: AppShell.tsx  ProtectedRoute.tsx  Sidebar.tsx
artifacts/trade-copilot/src/pages/: analytics.tsx  broker-portfolio.tsx  broker-sync.tsx  brokers.tsx  dashboard.tsx  insights.tsx  journal-tags.tsx  journal.tsx  login.tsx  trade-detail.tsx  trades.tsx
lib/api-spec/: openapi.yaml
(+12 files in other folders)
