[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "itsdangerous==2.2.0",
    "openai==1.57.0",
    "pinecone==5.4.2",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
]
